# docs/swagger.yaml
@@ -15,6 +15,8 @@ definitions:
         type: integer
       name:
         type: string
+      position:
+        type: string
     type: object
   structs.Team:
     properties:
@@ -198,6 +200,11 @@ paths:
         name: height
         required: true
         type: string
+      - description: Position
+        in: query
+        name: position
+        required: true
+        type: string
       produces:
       - application/json
       responses:
@@ -247,6 +254,11 @@ paths:
       - description: Height
         in: query
         name: height
+        required: true
+        type: string
+      - description: Position
+        in: query
+        name: position
         required: true
         type: string
       produces:
